fix: fixed styles

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         </div>
         <div class="col">
           <div class="row">
-            <button class="col btn" id="btn-lookup">Look Up (Arrow Up)</button>
+            <button class="col btn" id="btn-lookup">Look Up (↑)</button>
           </div>
           <div class="row">
             <button class="col btn" id="btn-lookleft">
-              Look Left (Arrow Left)
+              Look Left (←)
             </button>
             <button class="col btn" id="btn-lookdown">
-              Look Down (Arrow Down)
+              Look Down (↓)
             </button>
             <button class="col btn" id="btn-lookright">
-              Look Right (Arrow Right)
+              Look Right (→)
             </button>
           </div>
         </div>
