fix: added pointer lock controls

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- for textures -->
     <canvas class="hide" id="canvas" width="128" height="128"></canvas>
     <div class="row wrap" id="view-wrapper">
+      <span class="note">Click to lock mouse</span>
       <div id="view" class="grid"></div>
     </div>
     <div class="controls">
